--- a/WebContent/assets/css/index.css
+++ b/WebContent/assets/css/index.css
@@ -1,7 +1,18 @@
 @import url('./base.css');
 
-
 .container {
 	width: 1200px;
 	margin: 0 auto;
+}
+
+#admin {
+	display: flex;
+}
+
+#sidebar {
+	width: 25rem;
+}
+
+#content {
+	width: calc(100% - 20rem);
 }
