--- a/WebContent/default/footer.css
+++ b/WebContent/default/footer.css
@@ -5,7 +5,7 @@
 	display: block;
 	width: 100%;
 	min-height: 100px;
-	background-color: #333;
+	background-color: #1c2632;
 	color: rgba(255, 255, 255, 0.8);
 }
 
