--- a/WebContent/default/header/header.css
+++ b/WebContent/default/header/header.css
@@ -73,6 +73,17 @@
 	position: relative;
 }
 
+.header_navbar-count {
+	position: absolute;
+	top: -0.5rem;
+	right: -1rem;
+	background-color: #5ec9ff;
+	border-radius: 100px;
+	padding: 0.2rem 0.5rem;
+	font-size: 1.4rem;
+	color: #f5f5f5;
+}
+
 .header__navbar-item-link ion-icon, .header__navbar-item-link i {
 	font-size: 3rem;
 	font-weight: 600;
