--- a/WebContent/system/products/create/index.css
+++ b/WebContent/system/products/create/index.css
@@ -8,44 +8,51 @@
 	padding-bottom: 36px;
 }
 
-.img img {
-	width: 200px;
-	border-radius: 50%;
-}
-
-.change_img, .save_change {
-	min-width: 100px;
-	height: 36px;
-	border-radius: 10px;
-	border: 1px solid #000;
-	font-size: 1.6rem;
-	margin-top: 16px;
-	cursor: pointer;
-}
-
-.customer_info-item {
+.actions {
 	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	margin-top: 20px;
+	justify-content: flex-start;
+	gap: 2rem;
+	padding-bottom: 0.5rem;
+	margin-bottom: 1rem;
+	border-bottom: 1px solid #ddd;
 }
 
-.customer_info-item label {
-	min-width: 120px;
-	text-align: start;
-	font-size: 1.8rem;
-	font-weight: 500;
-	color: var(- -text-color);
-	margin-right: 40px;
+.actions>a:hover {
+	text-decoration: underline;
 }
 
-.customer_info-item input {
-	flex: 1;
-	width: 50%;
-	height: 36px;
+.form-control {
+	margin-bottom: 20px;
 	outline: none;
-	border: 1px solid #B3B3B3;
-	border-radius: 10px;
-	padding-left: 10px;
+	padding: 1rem 1.5rem;
+	border-radius: 0.4rem;
+	border: 1px solid #ddd;
+	display: block;
+	width: 100%;
+	font-size: 1.4rem;
+}
+
+.form-control:focus {
+	outline: none !important;
+	border-color: #719ECE;
+	box-shadow: 0 0 10px #719ECE;
+}
+
+.btn-submit {
+	display: block;
+	width: fit-content;
+	outline: none;
+	border: 0.5px solid #6c757d;
+	padding: 1rem;
+	border-radius: 0.4rem;
+	cursor: pointer;
 	font-size: 1.6rem;
+	color: #6c757d;
+	background-color: transparent;
+	transition: all linear 0.2s;
+}
+
+.btn-submit:hover {
+	color: #fff;
+	background-color: #6c757d;
 }
