--- a/WebContent/default/account/changePassword/index.css
+++ b/WebContent/default/account/changePassword/index.css
@@ -1,7 +1,6 @@
-@charset "UTF-8";
+@charset "UTF-8"; 
 
 .login-form, .register-form, .modify-form {
-	background-color: #f5f5f5;
 	margin: 100px auto;
 	padding: 30px 30px 10px;
 	color: rgba(0, 0, 0, 0.6);
@@ -18,6 +17,7 @@
 	font-style: normal;
 	font-weight: 600;
 	margin-bottom: 2rem;
+	font-size: 2.4rem !important;
 }
 
 .modify-header {
@@ -41,11 +41,6 @@
 	box-shadow: 0 0 10px #719ECE;
 }
 
-.err__msg {
-	transform: translate(0, -1.5rem);
-	font-size: 1.2rem;
-	color: red;
-}
 .btn-submit {
 	display: block;
 	width: 100%;
@@ -66,7 +61,7 @@
 }
 
 .no-account, .have-account {
-	padding-top: 10px;
+	padding-top: 20px;
 	font-size: 0.8rem;
 }
 
