--- a/WebContent/default/search-product/index.css
+++ b/WebContent/default/search-product/index.css
@@ -71,6 +71,12 @@
 	overflow: hidden;
 }
 
+.home-product-item__rating {
+    font-size: 1.2rem;
+    color: orange;
+    margin: 0.5rem 0;
+}
+
 .home-product-item__name>a {
 	transition: all linear 0.2s;
 }
