--- a/WebContent/system/bills/list/index.css
+++ b/WebContent/system/bills/list/index.css
@@ -34,6 +34,14 @@
 	padding: 1rem 0;
 }
 
+.table__cell {
+	cursor: pointer;
+}
+
+.table__cell>span {
+	margin-right: 0.5rem
+}
+
 .table__row {
 	padding: 1.5rem 0;
 	font-size: 1.4rem;
@@ -55,5 +63,22 @@
 }
 
 .table__link a:hover {
+	text-decoration: underline;
+}
+
+.sub-nav {
+	display: flex;
+	align-items: flex-end;
+	gap: 0.5rem;
+	transform: translateY(-1rem);
+}
+
+.sub-nav-item {
+	font-size: 1.4rem;
+	transition: all linear 0.2s;
+}
+
+.sub-nav-item:hover {
+	color: #5ec9ff;
 	text-decoration: underline;
 }
