--- a/WebContent/system/imagesPreview/list/index.css
+++ b/WebContent/system/imagesPreview/list/index.css
@@ -1,5 +1,21 @@
 @charset "UTF-8";
 
+#admin {
+	display: flex;
+}
+
+#sidebar {
+	width: 25rem;
+}
+
+#header {
+	height: 6rem;
+}
+
+#main-content {
+	padding: 3rem 2rem 10rem 1rem;
+}
+
 .actions {
 	display: flex;
 	justify-content: flex-end;
@@ -57,7 +73,6 @@
 .table__link a:hover {
 	text-decoration: underline;
 }
-
 .sub-nav {
 	display: flex;
 	align-items: flex-end;
