--- a/WebContent/system/options/detail-update/index.css
+++ b/WebContent/system/options/detail-update/index.css
@@ -20,6 +20,7 @@
 .actions>a:hover {
 	text-decoration: underline;
 }
+
 .form-control {
 	margin-bottom: 20px;
 	outline: none;
@@ -36,6 +37,7 @@
 	border-color: #719ECE;
 	box-shadow: 0 0 10px #719ECE;
 }
+
 .btn-submit {
 	display: block;
 	width: fit-content;
@@ -53,4 +55,21 @@
 .btn-submit:hover {
 	color: #fff;
 	background-color: #6c757d;
+}
+
+.sub-nav {
+	display: flex;
+	align-items: flex-end;
+	gap: 0.5rem;
+	transform: translateY(-1rem);
+}
+
+.sub-nav-item {
+	font-size: 1.4rem;
+	transition: all linear 0.2s;
+}
+
+.sub-nav-item:hover {
+	color: #5ec9ff;
+	text-decoration: underline;
 }
