--- a/WebContent/system/partials/sidebar/index.css
+++ b/WebContent/system/partials/sidebar/index.css
@@ -14,7 +14,7 @@
 	top: 0;
 }
 
-.sidebar__logo {
+.sidebar__logo  {
 	height: 6rem;
 	padding: 0 1rem;
 	display: flex;
@@ -27,6 +27,7 @@
 
 .sidebar__logo>svg, .sidebar__logo>.sidebar__logo-name {
 	cursor: pointer;
+	color: #5ec9ff;
 }
 
 .sidebar__logo>svg {
@@ -49,16 +50,16 @@
 	align-items: center;
 	gap: 1rem;
 	border-bottom: 0.5px solid #f2f2f2;
-	padding: 1rem;
+	padding: 1.2rem 1rem;
 	transition: all 0.2s linear;
 	cursor: pointer;
 	color: #333;
 }
 
-.sidebar__nav-item:hover {
-	color: #5ec9ff;
+.sidebar__nav-item:hover, .sidebar__nav-item.active {
+	color: #fff;
+	background-color: #5ec9ff;
 	border-color: #5ec9ff;
-	padding-left: 1.5rem;
 }
 
 .sidebar__nav-item>svg {
