--- a/WebContent/system/products/create/index.css
+++ b/WebContent/system/products/create/index.css
@@ -56,3 +56,20 @@
 	color: #fff;
 	background-color: #6c757d;
 }
+
+.sub-nav {
+	display: flex;
+	align-items: flex-end;
+	gap: 0.5rem;
+	transform: translateY(-1rem);
+}
+
+.sub-nav-item {
+	font-size: 1.4rem;
+	transition: all linear 0.2s;
+}
+
+.sub-nav-item:hover {
+	color: #5ec9ff;
+	text-decoration: underline;
+}
