--- a/WebContent/system/bills/create/index.css
+++ b/WebContent/system/bills/create/index.css
@@ -8,17 +8,80 @@
 	padding-bottom: 36px;
 }
 
-.actions {
-	display: flex;
-	justify-content: flex-start;
-	gap: 2rem;
-	padding-bottom: 0.5rem;
-	margin-bottom: 1rem;
-	border-bottom: 1px solid #ddd;
+.img img {
+	width: 15rem;
+	border-radius: 50%;
+	border: 1px solid #ccc;
 }
 
-.actions>a:hover {
-	text-decoration: underline;
+.change_img, .save_change {
+	padding: 0.5rem 1rem;
+	border-radius: 4px;
+	border: 1px solid #000;
+	font-size: 1.6rem;
+	margin-top: 16px;
+	cursor: pointer;
+	display: block;
+	width: 120px;
+	margin: 20px auto
+}
+
+.customer_info-item {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	margin-top: 20px;
+}
+
+.customer_info-item label {
+	min-width: 120px;
+	text-align: start;
+	font-size: 1.8rem;
+	font-weight: 500;
+	color: var(- -text-color);
+	margin-right: 40px;
+}
+
+.customer_info-item input {
+	flex: 1;
+	width: 50%;
+	height: 36px;
+	outline: none;
+	border: 1px solid #B3B3B3;
+	border-radius: 10px;
+	padding-left: 10px;
+	font-size: 1.6rem;
+}
+
+.customer_info-item-select {
+	display: flex;
+	flex-direction: row;
+	margin-top: 20px;
+	align-items: center
+}
+
+.select-button {
+	display: flex;
+	justify-content: flex-start;
+	align-items: center
+}
+
+.customer_info-item label, .customer_info-item-select label {
+	min-width: 220px;
+	text-align: start;
+	font-size: 1.8rem;
+	font-weight: 500;
+	color: var(- -text-color);
+	margin-right: 0px;
+}
+
+.customer_info-item-select .select-button-label {
+	font-size: 1.6rem;
+	display: flex;
+	align-items: baseline;
+	margin-left: 8px;
+	color: var(- -text-color);
+	opacity: 0.7;
 }
 
 .form-control {
@@ -30,6 +93,13 @@
 	display: block;
 	width: 100%;
 	font-size: 1.4rem;
+}
+
+.form-group {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+	align-items: flex-start;
 }
 
 .form-control:focus {
