--- a/WebContent/system/imagesPreview/detail/index.css
+++ b/WebContent/system/imagesPreview/detail/index.css
@@ -21,6 +21,13 @@
 	text-decoration: underline;
 }
 
+.form-group {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+	align-items: flex-start;
+}
+
 .form-control {
 	margin-bottom: 20px;
 	outline: none;
