--- a/WebContent/system/options/create/index.css
+++ b/WebContent/system/options/create/index.css
@@ -38,6 +38,13 @@
 	box-shadow: 0 0 10px #719ECE;
 }
 
+.form-group {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+	align-items: flex-start;
+}
+
 .btn-submit {
 	display: block;
 	width: fit-content;
