--- a/WebContent/system/users/list/index.css
+++ b/WebContent/system/users/list/index.css
@@ -58,3 +58,22 @@
 .table__link a:hover {
 	text-decoration: underline;
 }
+
+
+.sub-nav {
+	display: flex;
+	align-items: flex-end;
+	gap: 0.5rem;
+	transform: translateY(-1rem);
+	margin-bottom: 2rem;
+}
+
+.sub-nav-item {
+	font-size: 1.4rem;
+	transition: all linear 0.2s;
+}
+
+.sub-nav-item:hover {
+	color: #5ec9ff;
+	text-decoration: underline;
+}
