--- a/WebContent/assets/css/default/home/home.css
+++ b/WebContent/assets/css/default/home/home.css
@@ -59,6 +59,10 @@
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
 }
 
 .home-product-item__name {
@@ -124,7 +128,7 @@
 
 .btn-more {
 	display: block;
-	margin: 40px auto 0;
+	margin: 20px auto 0;
 	width: 120px;
 }
 
