--- a/WebContent/assets/css/system/components/header.css
+++ b/WebContent/assets/css/system/components/header.css
@@ -28,7 +28,54 @@
 	border: 1px solid #d2d2d2;
 }
 
-.header__logout ion-icon {
-	font-size: 2.5rem;
-	cursor: pointer;
+
+/*Dropdown*/
+.dropdown {
+	position: relative;
+	display: inline-block;
+}
+
+.dropdown>a, .dropdown-content a {
+	font-weight: 500;
+	font-size: 1.7rem;
+}
+
+.dropdown>a, .dropdown-content a {
+	transition: all linear 0.1s;
+}
+
+.dropdown>a:hover, .dropdown-content a:hover {
+	color: #358dba;
+}
+
+.dropdown-content {
+	position: absolute;
+	background-color: #f9f9f9;
+	min-width: 160px;
+	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+	z-index: 1000;
+	display: none;
+	right: 0;
+
+	/*
+	transform: translate(-20%, 5%);
+	*/
+}
+
+.dropdown-content a {
+	color: black;
+	padding: 0.8rem 1.5rem;
+	text-decoration: none;
+	display: block;
+	text-decoration: none;
+	text-align: center;
+	font-size: 1.4rem;
+}
+
+.dropdown-content a:hover {
+	background-color: #f1f1f1;
+}
+
+.dropdown:hover .dropdown-content {
+	display: block;
 }
